Preventing skill component text from wrapping. Added material ui skill.

--- a/src/components/Skill/Skill.module.scss
+++ b/src/components/Skill/Skill.module.scss
@@ -28,5 +28,6 @@
     padding-left: 5px;
     font-size: 16px;
     color: $primary;
+    white-space: nowrap;
   }
 }
